--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.1.0",
     "sequelize": "^6.11.0",
