--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.1.0",
     "sequelize": "^6.11.0",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^4.6.2"
+    "swagger-ui-express": "^4.6.2",
+    "url": "^0.11.0"
   }
 }
